--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="style.css" media="all">
     <title>Sobre Mim</title>
 </head>
+<header >
+    <div class="top">
+        <h1 >Quem Sou?</h1>
+    </div>
+</header>
+
 <body>
-    <header >
-        <div id="top">
-            <h1 class="topo">Quem Sou?</h1>
-        </div>
-    </header>
-
-
 
     <main>
     <section>
